; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/extr_cred.c_test_network_cred__stock_userpass_validates_args.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/extr_cred.c_test_network_cred__stock_userpass_validates_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@.str = private unnamed_addr constant [5 x i8] c"user\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"pass\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_cred__stock_userpass_validates_args() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = bitcast %struct.TYPE_3__* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %2, i8 0, i64 16, i1 false)
  %3 = call i32 @git_cred_userpass(i32* null, i32* null, i32* null, i32 0, %struct.TYPE_3__* null)
  %4 = call i32 @cl_git_fail(i32 %3)
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %6 = call i32 @git_cred_userpass(i32* null, i32* null, i32* null, i32 0, %struct.TYPE_3__* %1)
  %7 = call i32 @cl_git_fail(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i8* null, i8** %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %9, align 8
  %10 = call i32 @git_cred_userpass(i32* null, i32* null, i32* null, i32 0, %struct.TYPE_3__* %1)
  %11 = call i32 @cl_git_fail(i32 %10)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_cred_userpass(i32*, i32*, i32*, i32, %struct.TYPE_3__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
